[gd_scene load_steps=2 format=3 uid="uid://b8x9k7v6m4nqr"]

[ext_resource type="Script" path="res://algorithms/proceduralaudio/fm_synthesis/FMSynthesis.gd" id="1_fm_synthesis"]

[node name="FMSynthesis" type="Node3D"]
script = ExtResource("1_fm_synthesis")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 12, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.2

[node name="Carrier" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0)
radius = 0.4

[node name="Modulator" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0)
radius = 0.3

[node name="ModulationPath" type="Node3D" parent="."]

[node name="OutputSpectrum" type="Node3D" parent="."]

[node name="CarrierFreq" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="ModulatorFreq" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="ModulationIndex" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="FMRatio" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -3, 0)
size = Vector3(0.8, 1, 0.4)
